Add crowdtap logo and ng-init directive

--- a/generators/app/templates/_public_index.html
+++ b/generators/app/templates/_public_index.html
@@ -16,7 +16,7 @@
         <div class="navbar-inner"></div>
       </div>
     </header>
-    <div id='<%= appName %>' class="main-wrapper" data-ng-app='<%= fullAppName %>'>
+    <div id='<%= appName %>' class="main-wrapper" data-ng-app='<%= fullAppName %>' data-ng-init="{}">
     </div>
   </body>
 </html>
