long live Todd Motto!

--- a/generators/app/templates/_public_index.html
+++ b/generators/app/templates/_public_index.html
@@ -17,6 +17,7 @@
       </div>
     </header>
     <div id='<%= appName %>' class="main-wrapper" data-ng-app='<%= fullAppName %>' data-ng-init="{}">
+      Yay! Welcome to your new Angular app
     </div>
   </body>
 </html>
