--- a/generators/app/templates/_public_index.html
+++ b/generators/app/templates/_public_index.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <div class="navbar navbar-fixed-top navbar-inverse">
+      <div class="navbar navbar-inverse">
         <div class="navbar-inner"></div>
       </div>
     </header>
